--- a/grid/03-grid-layout-3/index.html
+++ b/grid/03-grid-layout-3/index.html
@@ -21,7 +21,7 @@
           </ul>
         </div>
       </div>
-
+      <div class="body1">
       <div class="sidebar">
         <div class="photo">
           <p>placeholder for image</p>    
@@ -92,7 +92,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
         </div>
       </div>
-
+      </div>
       <div class="footer">
         <p>Copyright © The Odin Project 2021
       </div>
